@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.182 2007/03/02 09:40:13 unconed Exp $
+// $Id: CHANGELOG.txt,v 1.183 2007/03/28 14:08:21 dries Exp $
 
 Drupal 6.0, xxxx-xx-xx (development version)
 ----------------------
@@ -7,6 +7,11 @@ Drupal 6.0, xxxx-xx-xx (development version)
 - Drupal works with error reporting set to E_ALL.
 - Added scripts/drupal.sh to execute Drupal code from the command line. Useful to use Drupal as a framework to build command-line tools.
 - Used the Garland theme for the installation and maintenance pages.
+- Added generic language management functionality.
+    * Support for right to left scripts.
+    * Language detection based on parts of the URL.
+    * Browser based language detection.
+- Language dependent path aliases.
 
 Drupal 5.0, 2007-01-15
 ----------------------
